hphp/hack/test/typecheck/coeffects/read_globals/read_static_prop_lambda_error.php.exp
File "read_static_prop_lambda_error.php", line 12, characters 6-14:
Reading static properties requires the capability ReadGlobals, which is not provided by the context (Parsing[1002])
File "read_static_prop_lambda_error.php", line 21, characters 4-11:
Reading static properties requires the capability ReadGlobals, which is not provided by the context (Parsing[1002])
File "read_static_prop_lambda_error.php", line 29, characters 4-12:
Reading static properties requires the capability ReadGlobals, which is not provided by the context (Parsing[1002])
File "read_static_prop_lambda_error.php", line 12, characters 12-14:
Reading static properties requires the capability ReadGlobals, which is not provided by the context. (Typing[4401])
  File "read_static_prop_lambda_error.php", line 11, characters 53-54:
  The local (enclosing) context provides the capability set {}
File "read_static_prop_lambda_error.php", line 16, characters 12-14:
Creating mutable references to static properties requires the capability AccessGlobals, which is not provided by the context. (Typing[4401])
  File "read_static_prop_lambda_error.php", line 15, characters 72-83:
  The local (enclosing) context provides the capability ReadGlobals
  File "read_static_prop_lambda_error.php", line 16, characters 12-14:
  Please enclose the static in a readonly expression
File "read_static_prop_lambda_error.php", line 21, characters 9-11:
Reading static properties requires the capability ReadGlobals, which is not provided by the context. (Typing[4401])
  File "read_static_prop_lambda_error.php", line 20, characters 35-36:
  The local (enclosing) context provides the capability set {}
File "read_static_prop_lambda_error.php", line 25, characters 9-11:
Creating mutable references to static properties requires the capability AccessGlobals, which is not provided by the context. (Typing[4401])
  File "read_static_prop_lambda_error.php", line 24, characters 54-65:
  The local (enclosing) context provides the capability ReadGlobals
  File "read_static_prop_lambda_error.php", line 25, characters 9-11:
  Please enclose the static in a readonly expression
File "read_static_prop_lambda_error.php", line 29, characters 10-12:
Reading static properties requires the capability ReadGlobals, which is not provided by the context. (Typing[4401])
  File "read_static_prop_lambda_error.php", line 28, characters 51-52:
  The local (enclosing) context provides the capability set {}
File "read_static_prop_lambda_error.php", line 33, characters 10-12:
Creating mutable references to static properties requires the capability AccessGlobals, which is not provided by the context. (Typing[4401])
  File "read_static_prop_lambda_error.php", line 32, characters 70-81:
  The local (enclosing) context provides the capability ReadGlobals
  File "read_static_prop_lambda_error.php", line 33, characters 10-12:
  Please enclose the static in a readonly expression
